--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,54 @@
+.body{
+    width:100%;
+}
+
 .header-logo{
     width:100px;
     height:100px;
+    display:block;
+    margin:0 auto;
 }
 
+.header-list{
+    text-align:center;
+    padding-top:20px;
+    
+}
+
+a{
+    color:black;
+    text-decoration:none;
+}
+
+.back{
+    padding-right:10px;
+}
+
+.next{
+    padding-left:10px;
+}
+
+
+
+
 .img{
-    width:300px;
+    width:400px;
     height:500px;
+    display:block;
+    margin:0 auto;
+    padding-top:50px;
+}
+
+.sakuhin1{
+    width:400px;
+    
+    
+    
+}
+
+.sakuhin2{
+    width:400px;
+    
+   
+
 }
